<resources>
    <string name="app_name">TaskMaster</string>
    <string name="all_tasks">ALL TASKS</string>
    <string name="add_task">ADD TASK</string>
    <string name="my_tasks">My Tasks</string>

    <string name="task_description">Task description</string>

...
